// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decimal-length prop 1`] = `
<div class="van-submit-bar">
  <div class="van-submit-bar__bar">
    <div class="van-submit-bar__text"><span>合计：</span><span class="van-submit-bar__price">¥ 1.1</span></div><button class="van-button van-button--danger van-button--large van-button--square van-submit-bar__button"></button>
  </div>
</div>
`;

exports[`disable submit 1`] = `
<div class="van-submit-bar">
  <div class="van-submit-bar__bar">
    <div class="van-submit-bar__text"><span>合计：</span><span class="van-submit-bar__price">¥ 0.01</span></div><button disabled="disabled" class="van-button van-button--danger van-button--large van-button--disabled van-button--square van-submit-bar__button"></button>
  </div>
</div>
`;

exports[`suffix-label prop 1`] = `
<div class="van-submit-bar">
  <div class="van-submit-bar__bar">
    <div class="van-submit-bar__text"><span>Label</span><span class="van-submit-bar__price">¥ 1.11</span><span class="van-submit-bar__suffix-label">Suffix Label</span></div><button class="van-button van-button--danger van-button--large van-button--square van-submit-bar__button"></button>
  </div>
</div>
`;

exports[`top slot 1`] = `
<div class="van-submit-bar">top<div class="van-submit-bar__bar"><button class="van-button van-button--danger van-button--large van-button--square van-submit-bar__button"></button></div>
</div>
`;

exports[`without price 1`] = `
<div class="van-submit-bar">
  <div class="van-submit-bar__bar"><button class="van-button van-button--danger van-button--large van-button--square van-submit-bar__button"></button></div>
</div>
`;
